# scrapy-demo

./: .cz.toml  .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt  scrapinghub.yml
demo/: items.py  pipelines.py  settings.py
demo/spiders/: example.py
